--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,49 @@
-.App {
-  text-align: center;
+body {
+  background-color: black;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.star {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  height: 1px;
+  width: 1px;
+  background-color: #000;
+  border-radius: 50%;
+  animation: zoom 30s alternate infinite;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@keyframes zoom {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(1.8);
   }
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+iframe {
+  margin: auto;
+  border: none;
+}
+.apod {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  align-content: flex-start;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  column-gap: 1rem;
+  row-gap: 1.5rem;
+  background-color: transparent;
+  margin-top: 1rem;
+}
+.apod > div {
+  width: 350px;
+  z-index: 10;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+@media screen and (max-width: 600px) {
+  .apod > div {
+    margin: auto;
+    margin-bottom: 0.25rem;
+    min-width: 100vw;
   }
 }
